--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
 body {
     background-color: var(--color-dark);
     background-image: url(./assets/body_bg.png);
+    background-size: cover;
     color:var(--text-primary);
 }
 
