--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
 @import "tailwindcss";
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Oswald:wght@200..700&display=swap');
 
 :root {
     --text-light: #ffffff;
     --text-primary: #b5b5b5;
-    --text-secandary: #d12d2d;
+    --text-secondary: #d12d2d;
     --color-dark: #1b1b1b;
 }
 
@@ -12,7 +11,7 @@ body {
     background-color: var(--color-dark);
     background-image: url(./assets/body_bg.png);
     background-size: cover;
-    color:var(--text-primary);
+    color: var(--text-primary);
 }
 
 h1,
@@ -31,6 +30,16 @@ p,
 li,
 ul {
     font-family: "Josefin Sans", sans-serif;
+}
+
+.max-w-common {
+    max-width: 96vw;
+    margin: 0 auto;
+    padding: 0 4px;
+
+    @media (width >=64rem) {
+        max-width: 92vw;
+    }
 }
 
 .loading-animation {
