Hero Section Uploaded

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
     --text-primary: #b5b5b5;
     --text-secondary: #d12d2d;
     --color-dark: #1b1b1b;
+    --color-brown: #bd9675;
+    --color-dark-2: #2e2e31;
 }
 
 body {
