--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,6 +7,6 @@
     left: -8px;
     height: 15px;
     width: 15px;
-    background-image: url(./assets/welcomeIcon.svg);
+    background-image: url(../assets/welcomeIcon.svg);
     background-repeat: no-repeat;
 }
