--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,7 +18,7 @@ body {
     background-image: url(/body_bg.png);
     color: var(--text-primary);
     scroll-behavior: smooth;
-
+    overflow-x: hidden;
 }
 
 .font-pacifico {
@@ -30,12 +30,12 @@ body {
     font-family: "Josefin Sans", sans-serif;
 }
 
-.font-oswald{
+.font-oswald {
     font-family: "Oswald", sans-serif;
 }
 
 .text-border {
-  -webkit-text-stroke: 1.3px #b5b5b534;
+    -webkit-text-stroke: 1.3px #b5b5b534;
 }
 
 h1,
@@ -153,6 +153,6 @@ ul {
     }
 
     100% {
-       background-position: 0 0;
+        background-position: 0 0;
     }
 }
